# codemerge

./: .codemerge.yaml.template  .gitignore  .prettierrc.js  Cargo.toml  LICENSE  README.md  bun.lockb  default.nix  go.mod  go.sum  index.ts  justfile  main.go  package.json  tsconfig.json
.github/workflows/: nixos.yaml  pr.yaml  release.yaml
codemerge/cmd/: app.go  merge.go  tokens.go
codemerge/pkg/walker/: walker.go  walker_test.go
modules/config/: config.ts  index.ts  loader.test.ts  loader.ts  merge.test.ts  merge.ts
modules/ffi/: ffi.ts  index.ts
modules/filters/: budget.ts  content.ts  factory.ts  index.ts
modules/formatters/: api.ts  fabric.ts  index.ts  text.test.ts  text.ts
modules/gitignore/: gitignore.ts  index.ts
modules/handlers/: init.ts  merge.test.ts  merge.ts  tokens.ts  tree.ts
modules/loader/: index.ts  loader.test.ts  loader.ts  stdin.ts  tree.test.ts  tree.ts
modules/matcher/: index.ts  matcher.test.ts  matcher.ts
modules/testing/: index.ts  tree.ts
modules/tokens/: calc.test.ts  calc.ts  index.ts
rust/: Cargo.toml
rust/src/: file_data.rs  file_processing.rs  gitignore.rs  lib.rs
scripts/: install.sh
src/: cli.rs  config.rs  error.rs  file_ops.rs  lib.rs  main.rs  output_format.rs  token_counter.rs  token_management.rs
src/cache/: mod.rs  trait_def.rs
src/cache/providers/: mod.rs  none.rs  rocksdb.rs  sqlite.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs
src/core/: file.rs  filters.rs  gitignore.rs  mod.rs  tokens.rs  tree.rs
src/utils/: filters.rs  finder.rs  format.rs  mod.rs
