[package]
name = "codemerge"
description = "A command-line tool for merging multiple code files into a single output file"
license = "MIT"
version = "0.4.2"

edition = "2021"

[dependencies]
structopt = "0.3.26"
ignore = "0.4.23"
regex = "1.11.0"
glob = "0.3.1"
tempfile = "3.13.0"
vfs = "0.12.0"
tiktoken-rs = "0.5.9"
rayon = "1.10.0"
walkdir = "2.3"

