[package]
name = "codemerge"
description = "A command-line tool for merging multiple code files into a single output file"
license = "MIT"
version = "0.4.2"

edition = "2021"

[dependencies]
structopt = "0.3.26"
ignore = "0.4.23"
regex = "1.11.0"
glob = "0.3.1"
tempfile = "3.13.0"
vfs = "0.12.0"
tiktoken-rs = "0.5.9"
rayon = "1.10.0"
walkdir = "2.3"
thiserror = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
claude-tokenizer = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
chrono = "0.4"
serde_yaml = "0.9"
toml = "0.8"