[package]
name = "codemerge"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
globset = "0.4"
tiktoken-rs = "0.5"
memmap2 = "0.9"
once_cell = "1.18"
ignore = "0.4"
tempfile = "3.16"
dirs = "5.0"
rusqlite = { version = "0.29", features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }

[features]
default = ["sqlite", "rocksdb-backend"]
sqlite = []
rocksdb-backend = ["dep:rocksdb"]
