[package]
name = "file_reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
anyhow = "1.0"
memmap2 = "0.9.5"
num_cpus = "1.16.0"
ignore = "0.4"
globset = "0.4"
walkdir = "2.5.0"
tiktoken-rs = "0.6.0"
